@@ -60,6 +60,7 @@ extern "C" {
     void webkit_init();
 
 #define WEBKIT_PARAM_READABLE ((GParamFlags)(G_PARAM_READABLE|G_PARAM_STATIC_NAME|G_PARAM_STATIC_NICK|G_PARAM_STATIC_BLURB))
+#define WEBKIT_PARAM_WRITABLE ((GParamFlags)(G_PARAM_WRITABLE|G_PARAM_STATIC_NAME|G_PARAM_STATIC_NICK|G_PARAM_STATIC_BLURB))
 #define WEBKIT_PARAM_READWRITE ((GParamFlags)(G_PARAM_READWRITE|G_PARAM_STATIC_NAME|G_PARAM_STATIC_NICK|G_PARAM_STATIC_BLURB))
 
     #define WEBKIT_WEB_VIEW_GET_PRIVATE(obj)    (G_TYPE_INSTANCE_GET_PRIVATE((obj), WEBKIT_TYPE_WEB_VIEW, WebKitWebViewPrivate))
@@ -84,7 +85,9 @@ extern "C" {
         GtkTargetList* copy_target_list;
         GtkTargetList* paste_target_list;
 
-        gboolean transparent;
+        GdkColor bg_color;
+        guint16 bg_alpha;
+        gboolean bg_color_set;
 
         GtkAdjustment* horizontalAdjustment;
         GtkAdjustment* verticalAdjustment;
